# wasm-bundler

./: Cargo.toml  LICENSE_MIT  README.md
src/: bundler.rs  filesystem.rs  lib.rs  log.rs
www/: index.html  index.js  package-lock.json  package.json
